--- a/style.css
+++ b/style.css
@@ -1,29 +1,12 @@
 form {
-    display: flex;
-    flex-direction: column;
     width: 50%;
     margin: 0 auto;
-}
-
-button {
-    margin: 20px auto !important;
-    width: 70% !important;
-}
-
-label, button{
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-    font-weight: 500;
-    font-size: 24px;
 }
 
 input {
     width: 100%;
-    height: 2em;
-    font-size: 20px;
 }
 
-h1 {
-    text-align: center;
+label,input{
+    font-size: 1.8em;
 }
